--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="description" content="Francis Usher's personal website" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png?v=2" />
+  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v=2" color="#2d89ef">
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json?v=2" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +24,51 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Francis Usher</title>
+</head>
+
+<body>
+  <noscript>
+    <h1>Francis Usher</h1>
+
+    <section>
+      <h2>Professionial Software Engineer</h2>
+      <p>
+        Since 2015 I have been working as a professional software engineer,
+        with a passion for modern web front-end technology.
+
+        My backgound in mathematics gives me a keen eye for maintainable
+        software, with clean, testable abstractions, and idiomatic design
+        patterns.
+
+        I enjoy the challenge of leading an agile team to preserve the
+        value of legacy systems, by evolving them into modern software
+        within the constraints of changing business needs.
+      <ul>
+        <li>
+
+        </li>
+      </ul>
+      </p>
+    </section>
+
+    <section>
+      <h2>DIY Tech Enthusiast</h2>
+      <p>
+      <ul>
+        <li></li>
+      </ul>
+      </p>
+    </section>
+
+    <section>
+      <h2></h2>
+    </section>
+
+
+  </noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +78,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
